.ci-logs/last-build-error.log
Cannot remap modifiers because it does not exists in any of the targets [] or their parents.
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:6: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:30: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:45: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:52: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:53: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:67: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:6: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:30: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:53: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:45: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:52: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:67: error: cannot find symbol
---FULL TAIL---
  location: class FPSBooster
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:45: error: cannot find symbol
        savedGraphics   = mc.options.getGraphicsMode().getValue();
                                    ^
  symbol:   method getGraphicsMode()
  location: variable options of type GameOptions
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:52: error: cannot find symbol
        mc.options.getGraphicsMode().setValue(GraphicsMode.FAST);
                  ^
  symbol:   method getGraphicsMode()
  location: variable options of type GameOptions
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:53: error: cannot find symbol
        mc.options.getParticles().setValue(ParticlesMode.MINIMAL);
                                           ^
  symbol:   variable ParticlesMode
  location: class FPSBooster
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:67: error: cannot find symbol
        mc.options.getGraphicsMode().setValue(savedGraphics);
                  ^
  symbol:   method getGraphicsMode()
  location: variable options of type GameOptions
Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/runner/work/Azelux-Client/Azelux-Client/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava' (registered by plugin class 'org.gradle.api.plugins.JavaBasePlugin').
> Compilation failed; see the compiler output below.
  Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:6: error: cannot find symbol
  import net.minecraft.client.option.ParticlesMode;
                                    ^
    symbol:   class ParticlesMode
    location: package net.minecraft.client.option
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:30: error: cannot find symbol
      private ParticlesMode savedParticles;
              ^
    symbol:   class ParticlesMode
    location: class FPSBooster
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:53: error: cannot find symbol
          mc.options.getParticles().setValue(ParticlesMode.MINIMAL);
                                             ^
    symbol:   variable ParticlesMode
    location: class FPSBooster
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:45: error: cannot find symbol
          savedGraphics   = mc.options.getGraphicsMode().getValue();
                                      ^
    symbol:   method getGraphicsMode()
    location: variable options of type GameOptions
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:52: error: cannot find symbol
          mc.options.getGraphicsMode().setValue(GraphicsMode.FAST);
                    ^
    symbol:   method getGraphicsMode()
    location: variable options of type GameOptions
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/FPSBooster.java:67: error: cannot find symbol
          mc.options.getGraphicsMode().setValue(savedGraphics);
                    ^
    symbol:   method getGraphicsMode()
    location: variable options of type GameOptions
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.6.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 51s
1 actionable task: 1 executed
